upgrade to jackson 3